--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,14 @@ cabal.sandbox.config
 .stack-work/
 cabal.project.local
 
-log/
-SafeExec/
+log/access.log
+log/auth.log
+log/error.log
+SafeExec/os-detect
+SafeExec/safeexec
 public
-site_key.txt
 snaplets/sqlite-auth/
+site_key.txt
 stack.yaml.lock
 submissions.db
 codex.cabal
