shibboleth working with codex

--- a/devel.cfg
+++ b/devel.cfg
@@ -150,4 +150,8 @@ system {
 deepLApiKey = "81796376-f600-4c84-ad13-db528d7c9141:fx"
 deepLUrl = "https://api-free.deepl.com/v2/translate"
 
+# Shibboleth configuration
+shibboleth_endpoint = "https://codex.local/Shibboleth.sso/Login"
+shibboleth_callback_endpoint = "/shibboleth-callback" 
+shibboleth_attributes = "commonName nMec"
 
