--- a/shibboleth/codex.local.conf
+++ b/shibboleth/codex.local.conf
@@ -15,6 +15,14 @@
         ShibRequestSetting requireSession 1
         require valid-user
     </Location>
+    
+    <Location /shibboleth-callback>
+        AuthType shibboleth
+        ShibRequestSetting requireSession 1
+        require valid-user
+        
+        ShibUseHeaders On
+    </Location>
 
     ProxyPreserveHost On
     ProxyPass / http://localhost:8000/
