--- a/stack.yaml
+++ b/stack.yaml
@@ -11,7 +11,8 @@ extra-deps:
   - snap-web-routes-0.5.1.0
   - snaplet-sqlite-simple-1.0.0.2
   - fast-myers-diff-0.0.1
-  - http-conduit-2.3.8 
+  - http-conduit-2.3.8
+  - case-insensitive-1.2.1.0 
 
 resolver: lts-21.9
 
